cv final update

--- a/Exercices/creez-votre-cv/style.css
+++ b/Exercices/creez-votre-cv/style.css
@@ -1,6 +1,62 @@
-body{
-  width: 100%
+html {
+  box-sizing: border-box;
 }
-a{
-  
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+body {
+  font-family: 'source sans pro', sans-serif;
+  line-height: 1.5;
+  background: grey;
+  color: #323232;
+}
+P {
+  text-align: justify;
+}
+a {
+  color: #323232;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
+img {
+  max-width: 100%;
+  font-size: 20px;
+}
+
+.container {
+  max-width: 750px;
+  margin: 40px auto;
+  padding: 32px;
+  background: #f76;
+}
+section {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-row: gap 20px;
+  padding: 24px 0;
+  border-bottom: 1px solid lightgrey;
+}
+section:last-child {
+  border-bottom: none;
+}
+
+.section .title {
+  font-weight: bold;
+  font-size: 18px;
+}
+.my_name {
+  font-size: 48px;
+  line-height: 1;
+}
+.my_tite {
+  font-size: 24px;
+  font-weight: 300;
+  color: #236fb2;
+}
+.section-title {
+  color: white;
 }
